Kubernetes/Kubernetes_Challenge/my-service-eval.yml
apiVersion: v1
kind: Service
metadata:
  name: my-api-service
  labels:
    app: mysqlapi
spec:
  type: ClusterIP
  ports:
  - name: api
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: mysqlapi
